fix : model overlap

--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -7,6 +7,7 @@
   background-color: rgba(54, 32, 32, 0.3);
   display: flex;
   flex-direction: column;
+  z-index: 2;
 }
 
 .modal-inputs {
